<resources>
    <string name="text_long" translatable="false">abcdefghijklmnopqrstuvwxyz这是无序的测试文本1234567890abcdefghijklmnopqrstuvwxyz这是无序的测试文本1234567890!_+</string>
    <string name="text_long_2" translatable="false">1修复若干问题\n2修复若干问题\n3修复若干问题\n4修复若干问题\n5修复若干问题\n6修复若干问题\n6修复若干问题\n6修复若干问题\n6修复若干问题\n6修复若干问题</string>
    <string name="text_content" translatable="false"> Allison Burton intended to disclose her identity and pregnancy via a major project.Allison Burton intended to disclose her identity and pregnancy via a major project.Allison Burton intended to disclose her identity and pregnancy via a major project.Allison Burton intended to disclose her identity and pregnancy via a major project.Allison Burton intended to disclose her identity and pregnancy via a major project.Allison Burton intended to disclose her identity and pregnancy via a major project.</string>
    <string name="app_name" translatable="false">KissrAI</string>
    <string name="server_client_id" translatable="false">440557587699-60l79rcaqi2kjrl2ihqigbbh0eov1pj8.apps.googleusercontent.com</string>
    <string name="watch_all" translatable="false">Watch ALL</string>
    <string name="emojicon_test_name" translatable="false">Example</string>
    <string name="lv_1" translatable="false">A</string>
    <string name="lv_1_q" translatable="false">$150</string>
    <string name="lv_1_p" translatable="false">95%</string>
    <string name="lv_2" translatable="false">B</string>
    <string name="lv_2_q" translatable="false">$100</string>
    <string name="lv_2_p" translatable="false">80%</string>
    <string name="lv_3" translatable="false">C</string>
    <string name="lv_3_q" translatable="false">$50</string>
    <string name="lv_3_p" translatable="false">60%</string>
    <string name="lv_4" translatable="false">D</string>
    <string name="lv_4_q" translatable="false">$20</string>
    <string name="lv_4_p" translatable="false">40%</string>
    <string name="chat_title_vr_share_fb" translatable="false">Facebook</string>
    <string name="chat_title_vr_share_line" translatable="false">Line</string>
    <string name="chat_title_vr_share_mg" translatable="false">Messenger</string>
    <string name="chat_title_vr_share_whats" translatable="false">WhatsApp</string>
    <string name="chat_title_vr_share_twitter" translatable="false">Twitter</string>
    <string name="chat_title_vr_share_telegram" translatable="false">Telegram</string>
    <string name="dialog_row_calculate_tip" translatable="false">A\nB\nC\nD</string>
    <string name="dialog_row_connection_rate_tip" translatable="false">≥95%\n≥80%\n≥60%\n&lt;60%</string>
    <string name="dialog_row_num_calls_tip" translatable="false">≥80\n≥50\n≥25\n&lt;25</string>
    <string name="dialog_row_average_call_duration_tip" translatable="false">≥3\n≥1.5\n≥1\n&lt;1</string>
    <string name="dialog_row_report_num_tip" translatable="false">≤3\n≤2\n≤3\n≥&lt;4</string>
    <string name="dialog_row_exchange_rate_tip" translatable="false">$50\n$40\n$30\n$20</string>
    <string name="loading">Loading…</string>
    <string name="load_complete">Loaded</string>
    <string name="load_failed">Failed to load</string>
    <string name="load_no_more">- That\'s all -</string>
    <string name="pull_load_more">Pull to load more</string>
    <string name="toast_err_empty_data">No data from server</string>
    <string name="toast_err_net">Please check your network connection</string>
    <string name="toast_err_service">Server error, please try again later</string>
    <string name="toast_err_system">System error, please try again later</string>
    <string name="toast_err_play_audio">Error playing audio, please try again later</string>
    <string name="toast_save_success">Saved successfully</string>
    <string name="toast_save_failed">Failed to save, please try again later</string>
    <string name="toast_op_failed">Operation failed, please try again later</string>
    <string name="toast_upload_failed">Upload failed, please try again later</string>
    <string name="toast_upload_success">Uploaded successfully</string>
    <string name="toast_delete_fail">Deletion failed, please try again later</string>
    <string name="toast_send_fail">Failed to send</string>
    <string name="toast_send_ok">Sent successfully</string>
    <string name="toast_login_expired">Session expired, please log in again</string>
    <string name="toast_denied_camera">Camera permission denied. Please enable it in system settings.</string>
    <string name="toast_denied_storage">Media library permission denied. Please enable it in system settings.</string>
    <string name="toast_err_empty_msg">No messages yet</string>
    <string name="toast_err_must_complete_cur_step">Please complete the current step to proceed.</string>
    <string name="toast_input_text">Please enter some text.</string>
    <string name="toast_err_not_say_hi">You\'ve already said hi. Cannot send again.</string>
    <string name="toast_err_plz_select_data">You need to select the pinned post to submit changes.</string>
    <string name="toast_err_only_top">Sorry, you can only pin up to 2 posts.</string>
    <string name="toast_err_only_published">Sorry, only published posts can be pinned.</string>
    <string name="toast_translate">Translation is on. The latest 50 messages will be translated, and new messages will be translated automatically.</string>
    <string name="default_">Default</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="retry">Refresh</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="go_on">Continue</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="copy">Copy</string>
    <string name="send">Send</string>
    <string name="more">More</string>
    <string name="record_again">Record again</string>
    <string name="notice">Notice</string>
    <string name="remove">Remove</string>
    <string name="buy">Buy</string>
    <string name="all_photo">All Photos</string>
    <string name="all_video">All Videos</string>
    <string name="pre_view">Preview</string>
    <string name="no_picture_found">No files found</string>
    <string name="open_camera">Take Photo</string>
    <string name="open_album">Upload from Album</string>
    <string name="toast_at_least_photos">Please select at least %d photos</string>
    <string name="toast_at_least_videos">Please select at least %d videos</string>
    <string name="toast_max_select_media">Select up to %d photos/videos</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_terms">User Agreement</string>
    <string name="no_install">%s is not installed. Please install it to share.</string>
    <string name="time_now">Just now</string>
    <string name="time_before_minute_ago">%d minute ago</string>
    <string name="time_before_minutes_ago">%d minutes ago</string>
    <string name="time_before_hour_ago">%d hour ago</string>
    <string name="time_before_hours_ago">%d hours ago</string>
    <string name="time_before_day_ago">%d day ago</string>
    <string name="time_before_days_ago">%d days ago</string>
    <string name="time_before_week_ago">%d week ago</string>
    <string name="time_before_weeks_ago">%d weeks ago</string>
    <string name="time_before_month_ago">%d month ago</string>
    <string name="time_before_months_ago">%d months ago</string>
    <string name="time_before_year_ago">%d year ago</string>
    <string name="time_before_years_ago">%d years ago</string>
    <string name="gkd_date_just">Just now</string>
    <string name="gkd_date_yesterday">Yesterday</string>
    <string name="message_air_drop_time_today">Today</string>
    <string name="urge_001">Don\'t worry, stay online to meet more users!</string>
    <string name="urge_002">Being a little flirty or cute can be a secret weapon to keep users around~</string>
    <string name="urge_003">Extend the call a bit longer for a chance to get gifts or good reviews~</string>
    <string name="urge_004">Keep smiling with a sweet tone, chat about their hobbies, and you might get a little surprise~</string>
    <string name="urge_005">Great job just now! Keep it up, and longer calls will be no problem!</string>
    <string name="urge_006">No gifts this time, but the call duration was great. Aim for a longer chat and more surprises next time!</string>
    <string name="urge_007">Relax a bit more, captivate him, and a surprise might just come your way!</string>
    <string name="hello_1">Do you like a girl who takes the lead? Can I get a little closer?</string>
    <string name="hello_2">Just got out of the shower and I smell amazing. Want a sniff?</string>
    <string name="hello_3">I\'m all alone in my room. Are you here to make my heart race?</string>
    <string name="hello_4">Should I say \'welcome\' or \'welcome to explore deeper\'?</string>
    <string name="hello_5">The way you\'re staring at me... trying to make me blush or strip?</string>
    <string name="hello_6">Wanna guess what color my under... wear my mood is?</string>
    <string name="hello_7">Others come to chat, but when you walked in, I wanted to go off-script.</string>
    <string name="hello_8">I was just thinking who could give me butterflies tonight, and then you showed up.</string>
    <string name="hello_9">Do you want to see me smile first, or flirt first?</string>
    <string name="hello_10">I was about to sleep, but you\'re here. Are you going to lull me to sleep?</string>
    <string name="hello_default">Hey, nice to meet you.</string>
    <string name="home_tab_home">Keyboard</string>
    <string name="home_tab_msg">Persona</string>
    <string name="home_tab_me">Me</string>
    <string name="home_share_page">Share Profile</string>
    <string name="home_my_status">My Status</string>
    <string name="home_online">Online</string>
    <string name="home_offline">Offline</string>
    <string name="home_my_lv">My Level:</string>
    <string name="home_exchange_rate">Exchange Rate: 1000 Coins = $50</string>
    <string name="home_user_recommend">User Recommendations</string>
    <string name="home_call_history">Call History</string>
    <string name="dialog_lv_rate">What is Rating</string>
    <string name="dialog_lv_rate_tip">Host rating is based on overall performance. The higher the level, the better the coin exchange rate.</string>
    <string name="dialog_lv_rate_title">Your rating is determined by the following metrics:</string>
    <string name="dialog_lv_connection_rate">Answer Rate:</string>
    <string name="dialog_lv_num_calls">Number of Calls:</string>
    <string name="dialog_lv_average_call_duration">Average Call Duration:</string>
    <string name="dialog_lv_report_num">Successful Complaints:</string>
    <string name="dialog_lv_calculate">How is the rating determined?</string>
    <string name="dialog_lv_calculate_tip">*For level D, only one condition needs to be met. For levels above D, all conditions must be met to be promoted.</string>
    <string name="dialog_row_calculate">Rating</string>
    <string name="dialog_row_connection_rate">Answer Rate</string>
    <string name="dialog_row_num_calls">Calls</string>
    <string name="dialog_row_average_call_duration">Avg. Call\nDuration (min)</string>
    <string name="dialog_row_report_num">Complaint\nRate</string>
    <string name="dialog_row_exchange_rate">Exchange Rate\n(10000 Coins)</string>
    <string name="app_update_now">Update Now</string>
    <string name="app_update_auto">Auto-update</string>
    <string name="app_update_loading">Downloading, please wait...</string>
    <string name="download_retry">点击重试</string>
</resources>