<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_solid_r15_white"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:scaleType="fitXY"
        android:src="@drawable/ic_share_bg"
        app:layout_constraintDimensionRatio="h,250:108"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dd_tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_19"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/app_update_auto"
        android:textColor="@color/cl2C2E33"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_14"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_23"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/progress_drawable_download"
        android:thumb="@drawable/video_seek_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dd_tv_title" />

    <TextView
        android:id="@+id/dd_btn_end"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_20"
        android:gravity="start|center_vertical"
        android:text="@string/app_update_loading"
        android:textColor="#6E7380"
        android:textSize="@dimen/sp_11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb1" />

    <com.ruffian.library.widget.RTextView
        android:id="@+id/dd_btn_start"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_43"
        android:layout_marginBottom="@dimen/dp_27"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_goneMarginBottom="@dimen/dp_24"
        android:gravity="center"
        android:text="@string/app_update_now"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_13"
        android:textStyle="bold"
        app:background_normal="#FF4D6F"
        app:corner_radius="@dimen/dp_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dd_btn_end" />

    <com.ruffian.library.widget.RTextView
        android:visibility="gone"
        android:id="@+id/dd_btn_start_2"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_43"
        android:layout_marginBottom="@dimen/dp_27"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_goneMarginBottom="@dimen/dp_24"
        android:gravity="center"
        android:text="@string/download_retry"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_13"
        android:textStyle="bold"
        app:background_normal="#FF4D6F"
        app:corner_radius="@dimen/dp_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dd_btn_end" />


</androidx.constraintlayout.widget.ConstraintLayout>